# fishAI

./: CMakeLists.txt  FishAI.pro  README.md  database.cpp  database.h  database.ui  http.cpp  http.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
